# FiboTowerDefense

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CMakeLists.txt  README.md  paths.json
.playwright-cli/: page-2026-05-23T15-12-52-247Z.yml  test-web.js  test-web2.js  test-web3.js
.tmp/sessions/2026-05-17-raylib-setup/: context.md
cmake/: toolchain-mingw.cmake
context/: navigation.md
context/academic/final-project/: navigation.md
context/academic/final-project/concepts/: oop-requirements.md  project-overview.md  software-architecture.md  ui-design.md
context/academic/final-project/errors/: project-risks.md
context/academic/final-project/examples/: base-board.md  board.cpp
context/academic/final-project/guides/: demo-video.md  how-to-play.md  presentation.md
context/academic/final-project/lookup/: readme-format.md  scoring-criteria.md  software-requirements.md
context/concepts/: game-architecture.md
context/core/context-system/guides/: organizing-context.md
context/core/context-system/operations/: harvest.md  migrate.md
context/core/context-system/standards/: structure.md
context/examples/: boss-powerup.md
context/lookup/: api-docs.md  api-reference.md
docs/: software-requirements.md
include/: board.hpp  enemy.hpp  game.hpp  game_board.hpp  game_grid.hpp  high_score_table.hpp  id_generator.hpp  identifier.hpp  idisplay_name.hpp  isprite.hpp  layer.hpp  level.hpp  projectile.hpp  scoreboard.hpp  solar_cell.hpp  spring_anim.hpp  sprite.hpp  tower.hpp  turret.hpp  util.hpp  wave_manager.hpp
include/Board/: board.h
src/: board.cpp  enemy.cpp  game.cpp  game_board.cpp  game_grid.cpp  high_score_table.cpp  layer.cpp  level.cpp  main.cpp  projectile.cpp  raygui_impl.cpp  scoreboard.cpp  solar_cell.cpp  sprite.cpp  tower.cpp  turret.cpp  wave_manager.cpp
src/Board/: board.cpp
web/: shell.html
